<resources>
    <string name="app_name">DCDC Converters Design</string>
    <string name="help">Help</string>
    <string name="required_memory_info">Required memory</string>
    <string name="max_time_recommended_info">Max time \nrecommended</string>
    <string name="buckText">BUCK</string>
    <string name="boostText">BOOST</string>
    <string name="buckBoostText">BUCK-BOOST</string>
    <string name="duty_cycle_text">Duty Cycle</string>
    <string name="duty_cycle_value">%d %%</string>
    <string name="converters">Converters</string>
    <string name="resistance">Resistance</string>
    <string name="capacitance">Capacitance</string>
    <string name="inductance">Inductance</string>
    <string name="capacitance_text">%s%s</string>
    <string name="inductance_text">%s%s</string>
    <string name="required_memory_big_text">
        Simulating for extended periods of time or using excessive storage space
        (above 10 MB) may crash the app. Proceed at your own risk if you need to
        exceed this limit.</string>
    <string name="reverse_mode_inductor_note">For the reverse mode, the designed inductor shows
        the ideal component for the design</string>
    <string name="mode_warning_simulation">Simulation not available for DCM mode</string>
    <string name="time_step_text">Time Step</string>
    <string name="max_time_simulation_text">Define the maximum time of the simulation</string>
    <string name="default_text_simulation">Default time step is defined as 1/1000 of the
        switching frequency.</string>
    <string name="switch_current_btn_simulation">Switch Current</string>
    <string name="capacitor_current_btn_simulation">Capacitor Current</string>
    <string name="inductor_current_btn_simulation">Inductor Current</string>
    <string name="diode_current_btn_simulation">Diode Current</string>
    <string name="input_current_btn_simulation">Input Current</string>
    <string name="output_current_btn_simulation">Output Current</string>
    <string name="output_voltage_btn_simulation">Output Voltage</string>
    <string name="simulation_options">Simulation Variable</string>
    <string name="switching_frequency_text_simulation">Switching Frequency</string>
    <string name="max_time_text_2">Duration (ms)</string>
    <string name="max_time_simulation">Max Time</string>
    <string name="simulation_parameters">Simulation</string>
    <string name="reverse_design_text">Reverse Design</string>
    <string name="results">Input Values</string>
    <string name="capacitance_text_reverse">Capacitance (µF)</string>
    <string name="resistance_reverse_text">Resistance (Ω)</string>
    <string name="inductance_reverse_text">Inductance (µH)</string>
    <string name="example_design_btn">EXAMPLE</string>
    <string name="converters_text">Converters</string>
    <string name="frequency_text">Frequency (kHz)</string>
    <string name="ripple_capacitor_voltage_text">Ripple Cap. Voltage (%)</string>
    <string name="output_power_text">Output Power (W)</string>
    <string name="output_voltage_text">Output Voltage (V)</string>
    <string name="ripple_inductor_current_text">Ripple Ind. Current (%)</string>
    <string name="input_voltage_text">Input Voltage (V)</string>
    <string name="efficiency_text">Efficiency (%)</string>
    <string name="symbols">Symbols</string>
    <string name="converters_definitions">Converters Definitions</string>
    <string name="inductor_definitions">Inductor Definitions</string>
    <string name="snubber_definitions">Snubber Definitions</string>
    <string name="about">About</string>
    <string name="usual_design_mode_title">Design Mode</string>
    <string name="textView13">If you have the parameters</string>
    <string name="textView19"><![CDATA[(Voltages, Ripples & Currents)]]></string>
    <string name="usual_design_button">Usual Design</string>
    <string name="image_view_bolt">bolt</string>
    <string name="textView14">If you have the converter</string>
    <string name="textView18">(Voltages, Frequency, Components)</string>
    <string name="reverse_design_button">Reverse Design</string>
    <string name="imageViewRLC">RLC Circuit</string>
    <string name="buck_definition_text">
        The Buck Converter is designed to lower the output voltage compared to the input voltage, achieving greater efficiency than using simple resistors. The circuit employs a Low Pass Filter at its output, which filters out the signal that is switched by the MOSFET transistor.
        \n\n
        By doing so, the filter is able to eliminate the higher frequency components generated by the PWM (Pulse Width Modulation), resulting in a continuous voltage at the output that is controlled by the Duty Cycle, which refers to the width of the produced pulse.
        \n\n
        The figure below illustrates the performance of the Low Pass Filter in terms of the frequency domain versus the amplitude response in decibels (dB).
    </string>
    <string name="boost_definition">
        The Boost Converter, on the other hand, is designed to \'step up\' the input voltage. During the time when the switch is ON, the inductor is charged, and it is discharged when the switch is OFF. This enables the circuit to boost the voltage level.
        \n\n
        The capacitor in this circuit serves the same purpose as in the Buck Converter, which is to filter out the high-frequency switching noise.
</string>
    <string name="buck_boost_definition">
        This is also known as a Step Up / Step Down Converter. This circuit is capable of increasing or decreasing the input voltage as required while respecting the limits of the Duty Cycle.
        \n\n
        In this converter, when the switch is ON, the inductor becomes charged, and when it is OFF, its reverse polarity causes it to discharge through the diode and the load.
        \n\n
        For this circuit, when the Duty Cycle is between 0 and 0.5, it acts like a Buck Converter. On the other hand, when the Duty Cycle is between 0.5 and 1, the circuit acts like a Boost Converter.
        \n\n
        For all the Converters in this app, safety limits for the Duty Cycle are set between 0.05 and 0.95.
    </string>
    <string name="low_pass_filter_description">Low pass filter</string>
    <string name="low_filter">
        For this example, a Buck Converter was designed with a switching frequency of 25kHz, resulting n a cut-off frequency of 1591Hz. This enables the output voltage to remain almost constant, with the required voltage being produced by manipulating the Duty Cycle.
    </string>
    <string name="inductor_definition">
        The purpose of a magnetic core is to provide an adequate path for the magnetic flux. The most commonly used materials to construct the core are iron-silicon and ferrite. While the former has advantages at low frequency operation, the latter behaves better at higher frequencies, resulting in lower hysteresis losses and temperatures for use. However, ferrite has some disadvantages compared to iron-silicon, such as material brittleness and low saturation flux density.
        \n\n
        For this app, the method used for inductor design is the method by product of the areas.
        \n\n
        Internally, an automated and smart code routine is used that involves the data entered by the user, aiming to obtain the best possible and feasible design for the complete design of an E-core inductor.
        \n\n
        The figure below shows the graphical representation of an E-core inductor.
</string>
    <string name="inductor_image_description">Inductor E-CORE</string>
    <string name="inductor_definitions_2">
        Where:
        \n
        Lc: Magnetic Length;
        \n
        Aw: Window area;
        \n
        Ac: Core cross-sectional area.
        \n\n
        Usually, the values used to initiate the project are:
        \n\n
        Kw (%) = 70 \n Jmax (A / mm²) = 450 \n Bmax (T) = 0.3
        \n\n
        For ferrite cores, the value of Kw (the factor of copper occupancy within the reel) is typically set at 70%. However, it may vary depending on the skill of the person responsible for making the windings and the geometry of the conductors used.
        \n\n
        The value of Jmax (current density), which indicates the current capacity per unit area, depends on the conductors used. Generally set around 450 A / mm².
        \n\n
        Finally, the value of Bmax (flux density), is around 0.3 T, this is due to the magnetization curve of the material used.
        \n\n
        The results are:
        \n\n
        - Size Percent (%)
        \n
        - Air Gap (mm)
        \n - Core Model
        \n - Number of Turns
        \n - AWG (American Wire Gauge)
        \n - Parallel Conductors
        \n
    </string>
    <string name="inductorDefinitionsTitle">Inductor Definitions</string>
    <string name="snubber_definitions_text"><![CDATA[
        In the DC-DC converters, many high-frequency noises are generated at switch nodes. A Snubber circuit presents a way to reduce these noises with a path to these currents.
        \n\n
        The three figures below represent in blue the Snubber circuit to be implemented. In a real circuit, there are several parasitic inductances and capacitances present, which causes an accumulation of energy that causes a resonance of hundreds of MHz, causing deterioration by Electromagnetic Interference (EMI) and spikes in the waveform.]]>
    </string>
    <string name="buck_converter_title">Buck Converter</string>
    <string name="converters_definitions_title">Converters Definitions</string>
    <string name="boost_converter_title">Boost Converter</string>
    <string name="buck_boost_converter_title">Buck-Boost Converter</string>
    <string name="buck_boost_definition_snubber">
        When the high-switch (MOSFET) is OFF, the snubber capacitor will charge through the snubber resistor.
        \n\n
        When the MOSFET turns ON, the capacitor will discharge through the resistor to the MOSFET and to the circuit ground. The cycle will repeat until the capacitor is empty.
        \n\n
        The resistor is the only component that is contribute of power loss in this snubber circuit. Because of this, a dichotomy is open in the sense of having a higher yield with less losses or vice versa. A very high resistance will contribute with less losses, but will not be an effective snubber.
        \n\n
        On the other hand, a small resistance will contribute a better snubber however it ends up directly affecting the efficiency of the system. In this app, the design is made with the best possible choice and is highly recommended for use in circuits that require a high operating frequency.\n</string>
    <string name="email">dcdcconvertersproject@gmail.com</string>
    <string name="about_definitions_text">
        This app was developed by Leonardo Rodrigues, who holds a Master\'s degree in Power Electronics from INEP/UFSC (Federal University of Santa Catarina - Florianópolis, Brazil).
        \n\n
        The development started in 2018, and all information and equations have been validated through simulations, discussions with Ph.D.s in electrical engineer, research in books and IEEE (Institute of Electrical and Electronics Engineers) publications.
        \n\n
        In 2023, the app was refactored with a working DCM equations mode and a simulation for the selected converter. The software is now open-source, and the paid version no longer exists. If you wish, you can contribute directly to the GitHub repository at https://github.com/leonardoacr.
        \n\n
        For questions, suggestions, or complaints, please contact me at the email address below.
    </string>
    <string name="about_the_app">About the app</string>
    <string name="snubber_text_definitions_title">Snubber Definitions</string>
</resources>