<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reverse_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyBackground"
        tools:context=".views.ReverseDesignView">

        <TextView
            android:id="@+id/reverse_design_text"
            style="@style/MyDefaultText"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginTop="32dp"
            android:text="@string/reverse_design_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/colorGreen"
            android:textSize="36sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_voltage_reverse"
            style="@style/MyInput"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/results_reverse"
            app:layout_constraintTop_toBottomOf="@+id/results_reverse"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/output_voltage"
            style="@style/MyInput"
            android:layout_marginEnd="40dp"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/results_reverse"
            app:layout_constraintTop_toBottomOf="@+id/input_voltage_reverse"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inductance_reverse"
            style="@style/MyInput"
            android:layout_marginEnd="40dp"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/results_reverse"
            app:layout_constraintTop_toBottomOf="@+id/output_voltage"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/capacitance_reverse"
            style="@style/MyInput"
            android:layout_marginEnd="40dp"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/results_reverse"
            app:layout_constraintTop_toBottomOf="@+id/inductance_reverse"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/resistance_reverse"
            style="@style/MyInput"
            android:layout_marginEnd="40dp"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/results_reverse"
            app:layout_constraintTop_toBottomOf="@+id/capacitance_reverse"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/frequency_reverse"
            style="@style/MyInput"
            android:layout_marginEnd="40dp"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/results_reverse"
            app:layout_constraintTop_toBottomOf="@+id/resistance_reverse"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/efficiency_reverse"
            style="@style/MyInput"
            android:layout_marginEnd="40dp"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/results_reverse"
            app:layout_constraintTop_toBottomOf="@+id/frequency_reverse"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/results_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/results"
            android:fontFamily="@font/montserrat_bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="?android:attr/colorBackground"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reverse_design_text" />

        <TextView
            android:id="@+id/input_voltage_reverse_text"
            style="@style/MyInputText"
            android:layout_marginTop="16dp"
            android:text="@string/input_voltage_text"
            app:layout_constraintEnd_toStartOf="@+id/input_voltage_reverse"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/results_reverse" />

        <TextView
            android:id="@+id/capacitance_text_reverse"
            style="@style/MyInputText"
            android:text="@string/capacitance_text_reverse"
            app:layout_constraintEnd_toStartOf="@+id/capacitance_reverse"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inductance_reverse_text" />

        <TextView
            android:id="@+id/frequency_text_reverse"
            style="@style/MyInputText"
            android:text="@string/frequency_text"
            app:layout_constraintEnd_toStartOf="@+id/frequency_reverse"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resistance_reverse_text" />

        <TextView
            android:id="@+id/efficiency_text_reverse"
            style="@style/MyInputText"
            android:text="@string/efficiency_text"
            app:layout_constraintEnd_toStartOf="@+id/efficiency_reverse"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frequency_text_reverse" />

        <TextView
            android:id="@+id/resistance_reverse_text"
            style="@style/MyInputText"
            android:layout_marginStart="16dp"
            android:text="@string/resistance_reverse_text"
            app:layout_constraintEnd_toStartOf="@+id/resistance_reverse"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capacitance_text_reverse" />

        <TextView
            android:id="@+id/inductance_reverse_text"
            style="@style/MyInputText"
            android:text="@string/inductance_reverse_text"
            app:layout_constraintEnd_toStartOf="@+id/inductance_reverse"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/output_voltage_reverse_text" />

        <TextView
            android:id="@+id/output_voltage_reverse_text"
            style="@style/MyInputText"
            android:text="@string/output_voltage_text"
            app:layout_constraintEnd_toStartOf="@+id/output_voltage"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_voltage_reverse_text" />

        <Button
            android:id="@+id/example_reverse_design_btn"
            android:layout_width="228dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/example_design_btn"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/efficiency_reverse" />

        <TextView
            android:id="@+id/converters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_horizontal"
            android:text="@string/converters_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?android:attr/colorBackground"
            android:textSize="28sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/example_reverse_design_btn" />

        <Button
            android:id="@+id/buck_btn_reverse"
            android:layout_width="228dp"
            android:layout_height="32dp"
            style="@style/MyButtonStyle"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:text="@string/buckText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/converters"/>

        <Button
            android:id="@+id/boost_btn_reverse"
            style="@style/MyButtonStyle"
            android:layout_width="228dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/boostText"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buck_btn_reverse" />

        <Button
            android:id="@+id/buck_boost_btn_reverse"
            style="@style/MyButtonStyle"
            android:layout_width="228dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/buckBoostText"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boost_btn_reverse" />

        <View
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentBottom="true"
            app:layout_constraintTop_toBottomOf="@+id/buck_boost_btn_reverse" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>